Bug 1638464 - Do not access HelperThreadState() if it has not been initialized or has been torn down r=nbp

Differential Revision: https://phabricator.services.mozilla.com/D145004